--- a/Logo/index.html
+++ b/Logo/index.html
@@ -101,6 +101,8 @@
                 </div>
             </footer>
 
+            <!-- LOGIN BOX -->
+
             <div class="login" id="signupBox">
                 <div class="login-box">
                     <div class="login-body">
